--- a/index.html
+++ b/index.html
@@ -1,9 +1,314 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" >
 <head>
-<title>My second page</title>
+  <meta charset="UTF-8">
+  <title>My page</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel='stylesheet' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/default.css'>
+<link rel='stylesheet' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/layout.css'>
+<link rel='stylesheet' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/media-queries.css'>
+<link rel='stylesheet' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/magnific-popup.css'><link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-<p>Software enginering</p>
-<img src= "https://i.pinimg.com/564x/9f/97/f9/9f97f9fb6cba1de435803cba033f08dd.jpg"/>
+
+<header id="home">
+
+  <nav id="nav-wrap">
+    <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
+    <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
+    <ul id="nav" class="nav">
+      <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
+      <li><a class="smoothscroll" href="#about">About</a></li>
+      <li><a class="smoothscroll" href="#resume">Resume</a></li>
+      <li><a class="smoothscroll" href="#testimonials">Quotes</a></li>
+      <li><a class="smoothscroll" href="#contact">Contact</a></li>
+    </ul>
+
+
+  </nav>
+
+
+  <div class="row banner">
+    <div class="banner-text">
+      <h1 class="responsive-headline">Hello World!</h1>
+      <h3>My name is <span>Arsen</span>, i'm student of <span>LNU</span> and i am studying to be a <span>software engineer</span> to be able to create my own <span>pages, programs</span> and more for <span>PC</span> and <span>Mobile</span>. You can <a class="smoothscroll" href="#about">start scrolling</a>
+            and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+      <hr />
+      <ul class="social">
+        <li><a href="#"><i class="fa fa-instagram fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-cloud fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-spotify fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-bomb fa-2x"></i></a></li>
+      </ul>
+    </div>
+  </div>
+
+  <p class="scrolldown">
+    <a class="smoothscroll" href="#about"><i class="fa fa-angle-down"></i></a>
+  </p>
+
+</header>
+
+<section id="about">
+
+  <div class="row">
+
+    <div class="three columns">
+
+      <img class="" src="https://i.pinimg.com/564x/70/8e/cb/708ecb71e0e1de4b100ecf4e834cbb61.jpg" alt="" />
+
+    </div>
+
+    <div class="nine columns main-col">
+
+      <h2>About Me</h2>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+
+      <div class="row">
+
+        <div class="columns contact-details">
+
+          <h2>Contact Details</h2>
+          <p class="address">
+            <span>Arsen Shvediuk</span><br>
+            <span>Los Angeles<br>
+						                   Kalifornia
+                 </span><br>
+            <span>+380-973-288-212</span><br>
+            <span>arsen.shvedyuk@gmail.com</span>
+          </p>
+
+        </div>
+
+        <div class="columns download">
+          <p>
+            <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+          </p>
+        </div>
+
+      </div>
+
+
+    </div>
+
+
+  </div>
+
+</section>
+
+
+
+<section id="resume">
+
+
+  <div class="row education">
+
+    <div class="three columns header-col">
+      <h1><span>Education</span></h1>
+    </div>
+
+    <div class="nine columns main-col">
+
+      <div class="row item">
+
+        <div class="twelve columns">
+
+          <h3>Secondary school</h3>
+          <p class="info">Bachelors in Information Technology<span>&bull;</span> <em class="date">2020</em></p>
+
+          <p>
+            This was the first where I started exploring new research fields and dived into trying out new technologies and concepts. Algorithms being my favorite, I soon developed a passion for web and mobile platforms.
+          </p>
+
+        </div>
+
+      </div>
+
+
+      <div class="row item">
+
+        <div class="twelve columns">
+
+          <h3>In process</h3>
+          <p class="info">Science with Computer Science <span>&bull;</span> <em class="date">2021</em></p>
+
+          <p>
+            My high school kept my passion for technology ignited. Though I remember having a specific interest in Chemistry apart from Computers, I prefreably decide to blend both and developed a chemmistry with computer science.
+          </p>
+
+        </div>
+
+      </div>
+
+
+    </div>
+
+
+  </div>
+
+
+
+  <div class="row skill">
+
+    <div class="three columns header-col">
+      <h1><span>Skills</span></h1>
+    </div>
+
+    <div class="nine columns main-col">
+
+      <p>I call myself a polyglot programmer, a hybrid programmer in simpler terms.I have more than 6.8 years of experience in the field of Information Technology, with a consistent track record of promotions and increased responsibilities. I have a great
+        knowledge of C++, C, Java, LINUX, .NET and SQL server in PC based and real-time systems. Additional to that I have also been exposed to the work on embedded systems and mobile platforms like Android .I have also worked as a full-stack web developer
+        and familiar with latest web technology stacks like Nodejs and MongoDB .My experience in the industry as a software developer and recruitment , makes me a versatile , dynamic and a flexible team player. I enjoy working in a high energy and high
+        performance work environment. I have worked on and learned a great deal from several very interesting and complex projects
+      </p>
+
+      <div class="bars">
+
+        <ul class="skills">
+          <li><span class="bar-expand mobile"></span><em>Mobile Development(Android/iOS)</em></li>
+          <li><span class="bar-expand frontend"></span><em>Web Design(Frontend)</em></li>
+          <li><span class="bar-expand backend"></span><em>Web Development(Backend)</em></li>
+          <li><span class="bar-expand desktop"></span><em>Software Development</em></li>
+
+        </ul>
+
+      </div>
+
+
+    </div>
+
+
+  </div>
+
+
+</section>
+
+
+
+<section id="testimonials">
+
+  <div class="text-container">
+
+    <div class="row">
+
+      <div class="two columns header-col">
+
+        <h1><span>Client Testimonials</span></h1>
+
+      </div>
+
+      <div class="ten columns flex-container">
+
+        <div class="flexslider">
+
+          <ul class="slides">
+
+            <li>
+              <blockquote>
+                <p>"Programming isn't about what you know; it's about what you can figure out.”
+                </p>
+                <cite>Chris Pine</cite>
+              </blockquote>
+            </li>
+
+
+            <li>
+              <blockquote>
+                <p>"The only way to learn a new programming language is by writing programs in it."
+                </p>
+                <cite>Dennis Ritchie</cite>
+              </blockquote>
+            </li>
+
+
+            <li>
+              <blockquote>
+                <p>"Sometimes it's better to leave something alone, to pause, and that's very true of programming."
+                </p>
+                <cite>Joyce Wheeler</cite>
+              </blockquote>
+            </li>
+
+            <li>
+              <blockquote>
+                <p>""In some ways, programming is like painting. You start with a blank canvas and certain basic raw materials. You use a combination of science, art, and craft to determine what to do with them.""
+                </p>
+                <cite>Andrew Hunt</cite>
+              </blockquote>
+            </li>
+
+          </ul>
+
+        </div>
+
+
+      </div>
+
+
+    </div>
+
+
+  </div>
+
+
+</section>
+
+
+
+    <aside class="four columns footer-widgets">
+
+      <div class="widget widget_contact">
+
+
+        </p>
+
+      </div>
+
+
+    </aside>
+
+  </div>
+
+</section>
+
+<footer>
+
+  <div class="row">
+
+    <div class="twelve columns">
+
+      <ul class="social-links">
+        <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-google-plus fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-dribbble fa-2x"></i></a></li>
+        <li><a href="#"><i class="fa fa-skype fa-2x"></i></a></li>
+      </ul>
+
+    </div>
+
+    <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="	fa fa-angle-up fa-2x" style="vertical-align:middle"></i></a></div>
+
+  </div>
+
+</footer>
+
+  <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/modernizr.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/jquery-1.10.2.min.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/jquery-migrate-1.2.1.min.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/jquery.flexslider.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/waypoints.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/jquery.fittext.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/magnific-popup.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/665940/init.js'></script>
 </body>
 </html>
